--- a/castelo-ra-tim-bum.html
+++ b/castelo-ra-tim-bum.html
@@ -37,9 +37,20 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
-    <article>
-        <h1>Castelo Rá-Tim-Bum</h1>
-        <p>Nino é um menino de 300 anos que vive com seu tio e tia-avó, eles moram num castelo. No castelo tem animais falantes e recebe diariamente a visita de amigos humanos como por exemplo o Zeca, Pedro e Biba e outros. O vilão da história conhecido como Dr. Abobrinha, sempre disfarçado querendo comprar Castelo para construir um enorme prédio de cem andares.</p>
+
+    <article class="cas-rtb">
+        <img src="img/programas/castelo.jpg" alt="">
+        <section class="cas-rtb-lado">
+            <h1>Castelo Rá-Tim-Bum</h1>
+            <p>Nino é um menino de 300 anos que vive com seu tio e tia-avó, eles moram num castelo. No castelo tem animais falantes e recebe diariamente a visita de amigos humanos como por exemplo o Zeca, Pedro e Biba e outros. O vilão da história conhecido como Dr. Abobrinha, sempre disfarçado querendo comprar Castelo para construir um enorme prédio de cem andares.</p>
+        </section>
+        <aside class="img-castelo">
+            <img src="img/programas/personagens.jpg" alt="">
+            <img src="img/programas/etevaldo.jpg" alt="">
+            <img src="img/programas/passarinho.jpg" alt="">
+            <img src="img/programas/moradores.jpg" alt="">
+            <img src="img/programas/dr-abobrinha.jpg" alt="">
+        </aside>
     </article>
 
     <footer class="footer">
