--- a/cocorico.html
+++ b/cocorico.html
@@ -38,6 +38,21 @@
         </ul>
     </nav>
 
+    <article class="cocorico">
+        <section>
+            <h1>Cocoricó</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error asperiores ullam in impedit iste quo quia excepturi laboriosam, maxime corrupti delectus, obcaecati sequi facere assumenda. Aperiam unde repudiandae quibusdam corrupti?</p>
+        </section>
+        <section class="imgs-cocorico">
+        <img src="img/programas/cocorico.jpg" alt="personagens principais">
+
+        <aside class="img-cocorico">
+            <img src="img/programas/cocorico2.jpg" alt="personagens secundarios">
+            <img src="img/programas/cocorico3.jpg" alt="outros personagens">
+        </aside>
+        </section>
+    </article>
+
     <footer class="footer">
         <h4>Mapa do site</h4>
         <nav>
