--- a/estudios.html
+++ b/estudios.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-       <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
+        <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
     </header>
     <nav class="nav">
         <ul>
@@ -42,131 +42,154 @@
         <h1>Estúdios Brasileiros</h1>
 
         <h2> Copa Estúdio</h2>
-        <p>O estúdio de animação "Copa Studio" tem a sua sede localizada no Rio de Janeiro. Trabalhando a mais de 10 anos em
-            animações 2D, conquistou parcerias com grandes produtores americanos e nacionais, tais como: Cartoon Network,
+        <p>O estúdio de animação "Copa Studio" tem a sua sede localizada no Rio de Janeiro. Trabalhando a mais de 10
+            anos em
+            animações 2D, conquistou parcerias com grandes produtores americanos e nacionais, tais como: Cartoon
+            Network,
             Fox,
             Discovery Kids, Globo e Hasbro. O desenho animado "Irmão do Jorel" a tornou vencedora do prêmio Quirino de
             melhor
             animação. </p>
-            <ul>
-                <li>Tromba Trem</li>
-                <li>Historietas Assombradas (para Crianças Malcriadas)</li>
-                <li>Irmão do Jorel</li>
-                <li>As Microaventuras de Tito e Muda</li>
-                <li>Tuiga</li>
-                <li>Gigablaster</li>
-                <li>Ico Bit Zip</li>
-            </ul>
+        <ul>
+            <li>Tromba Trem</li>
+            <li>Historietas Assombradas (para Crianças Malcriadas)</li>
+            <li>Irmão do Jorel</li>
+            <li>As Microaventuras de Tito e Muda</li>
+            <li>Tuiga</li>
+            <li>Gigablaster</li>
+            <li>Ico Bit Zip</li>
+        </ul>
 
         <h2> Fish Films</h2>
-        <p>Sua matriz fica em Curitiba – PR trabalham com curtas, longas, series, documentários, livros e live action. Em
+        <p>Sua matriz fica em Curitiba – PR trabalham com curtas, longas, series, documentários, livros e live action.
+            Em
             seu site eles dizem: “O objetivo de inovar a forma como criamos storytelling visual, estabelecendo novas
-            possibilidades, contando histórias significativas e envolventes por meio de conteúdo de animação e computação
+            possibilidades, contando histórias significativas e envolventes por meio de conteúdo de animação e
+            computação
             gráfica. ” O estúdio tem um curta metragem chamado Napo com sua história dramática, concorreu a várias
             premiações
             em festivais internacionais. Foi um grande desafio para a equipe realizar o curta.</p>
 
         <h2> Start Anima</h2>
-        <p>O estúdio paulista foi responsável por mais de 2000 produções entre longas, comerciais e séries animadas. Estao
+        <p>O estúdio paulista foi responsável por mais de 2000 produções entre longas, comerciais e séries animadas.
+            Estao
             no mercado a mais de 50 anos, seus principais projetos foram “O Grilo Feliz”, a série “Bazzu na Escola
             Intergaláctica” e comerciais para a Danone, Lacta entre outras que o estúdio produziu.</p>
 
         <h2> Combo Estúdio</h2>
-        <p>O estúdio está em atividade desde 2014 já fez diversas parcerias e fazem diversas coisas desde animações em 2D
+        <p>O estúdio está em atividade desde 2014 já fez diversas parcerias e fazem diversas coisas desde animações em
+            2D
             até ilustrações, as produções que fizeram mais sucesso foram: Super Drags (Netflix), Any Malu a primeira
             youtuber
             em desenho animado.</p>
-            <ul>
-                <li>Super Drags</li>
-                <li>O (Sur)real Mundo de Any Malu</li>
-                <li>Any Malu Show</li>
-            </ul>
+        <ul>
+            <li>Super Drags</li>
+            <li>O (Sur)real Mundo de Any Malu</li>
+            <li>Any Malu Show</li>
+        </ul>
 
         <h2> Split Studio</h2>
-        <p>A Split Studio já trabalhou com grande empresas, como a Cartoon Network, Nickelodeon, Mauricio de Souza, Globo e
-            outras. Está em atuação desde 2010 e sua sede fica em São Paulo. A terceira temporada da animação do Sitio do
-            Picapau Amarelo e da série de Tv da Turma da Mônica, foram o estúdio Split que ficou responsável de produzir.
+        <p>A Split Studio já trabalhou com grande empresas, como a Cartoon Network, Nickelodeon, Mauricio de Souza,
+            Globo e
+            outras. Está em atuação desde 2010 e sua sede fica em São Paulo. A terceira temporada da animação do Sitio
+            do
+            Picapau Amarelo e da série de Tv da Turma da Mônica, foram o estúdio Split que ficou responsável de
+            produzir.
         </p>
 
         <h2> Lightstar Studios</h2>
-        <p>O estúdio de animação brasileira tem mais de 10 anos no mercado e é conhecido internacionalmente, fica em Santos
+        <p>O estúdio de animação brasileira tem mais de 10 anos no mercado e é conhecido internacionalmente, fica em
+            Santos
             – SP, e já foram nomeados a vários prêmios importantes como o Oscar e o Emmy Awards Kids. Suas produções são
             desde
             animações 2D e 3D a storyboard. Tiveram participações no filme Tigrão – O Filme, A Pequena Sereia II entre
             outros
             e foram indicados.</p>
-            <ul>
-                <li>Uma História de Amor e Fúria</li>
-                <li>SOS Fada Manu</li>
-                <li>Escola pra Cachorro</li>
-                <li>Juninho Play e Família</li>
-                <li>Turma da Mônica Jovem</li>
-            </ul>
+        <ul>
+            <li>Uma História de Amor e Fúria</li>
+            <li>SOS Fada Manu</li>
+            <li>Escola pra Cachorro</li>
+            <li>Juninho Play e Família</li>
+            <li>Turma da Mônica Jovem</li>
+        </ul>
 
         <h2> 44 Toons</h2>
-        <p>Estão no mercado a mais de 10 anos, dedicam a produção de filmes, curtas e games. Sua sede fica em São Paulo, no
-            Sumarezinho. Os principais trabalhos do estúdio foram “Nilba e os Desastronautas”, “Osmar, a Primeira Fatia do
+        <p>Estão no mercado a mais de 10 anos, dedicam a produção de filmes, curtas e games. Sua sede fica em São Paulo,
+            no
+            Sumarezinho. Os principais trabalhos do estúdio foram “Nilba e os Desastronautas”, “Osmar, a Primeira Fatia
+            do
             Pão
             de Forma”, “Lasanha Assassina” e “Super Herói Fora de Série”. </p>
-            <h3>Séries de TV</h3>
-            <ul>
-                <li>Nilba e os Desastronautas </li>
-                <li>Osmar, a Primeira Fatia do Pão de Forma</li>
-                <li>Tordesilhas</li>
-                <li>Bobolândia Monstrolândia</li>
-            </ul>
-            <h3>Longa-metragem</h3>
-            <ul>
-                <li>BugiGangue no Espaço</li>
-            </ul>
-            <h3>Curtas-metragens</h3>
-            <ul>
-                <li>A Lasanha Assassina</li>
-                <li>Osmar, a Primeira Fatia do Pão de Forma</li>
-                <li>BugiGangue Controle Terremoto (2010) </li>
-            </ul>
+        <h3>Séries de TV</h3>
+        <ul>
+            <li>Nilba e os Desastronautas </li>
+            <li>Osmar, a Primeira Fatia do Pão de Forma</li>
+            <li>Tordesilhas</li>
+            <li>Bobolândia Monstrolândia</li>
+        </ul>
+        <h3>Longa-metragem</h3>
+        <ul>
+            <li>BugiGangue no Espaço</li>
+        </ul>
+        <h3>Curtas-metragens</h3>
+        <ul>
+            <li>A Lasanha Assassina</li>
+            <li>Osmar, a Primeira Fatia do Pão de Forma</li>
+            <li>BugiGangue Controle Terremoto (2010) </li>
+        </ul>
 
         <h2> Zombie Studio</h2>
         <p>São especializados em animações 3D e na criacao de personagens realistas, sempre dando muita atenção aos
-            detalhes. Alguns trabalhos do estúdio estão “The Fall”, “Gears” e “Dream” todos personagens criados pela Zombie
+            detalhes. Alguns trabalhos do estúdio estão “The Fall”, “Gears” e “Dream” todos personagens criados pela
+            Zombie
             Studio.</p>
 
         <h2> 2Lab</h2>
-        <p>O estúdio trabalha com o audiovisual e animação, criam projetos, revisão e produz roteiros, storybords, concept
+        <p>O estúdio trabalha com o audiovisual e animação, criam projetos, revisão e produz roteiros, storybords,
+            concept
             de personagens e cenários. Um dos seus principais trabalhos está o clipe da música Aquarela de Toquinho.</p>
 
         <h2> Super Toons</h2>
         <p>O estúdio já produziu mais de 400 curtas, foi fundado por Dario Bentancour Sena e Elizabeth Mendes Bentancour
-            Sena. A sede comecou em São Paulo, são várias espalhadas pela cidade e no Rio de Janeiro. Eles são responsáveis
-            pelas animações do Carrossel e da Turma da Mônica. Já trabalharam com grandes empresas como a Disney Channel,
+            Sena. A sede comecou em São Paulo, são várias espalhadas pela cidade e no Rio de Janeiro. Eles são
+            responsáveis
+            pelas animações do Carrossel e da Turma da Mônica. Já trabalharam com grandes empresas como a Disney
+            Channel,
             Disney Junior entre outras.</p>
-            <ul>
-                <li>O Diário de Mika</li>
-                <li>Zuzubalândia (animação)</li>
-                <li>Carrossel em Desenho Animado </li>
-                <li>Zupt! com o Senninha </li>
-                <li>Tronquinho e Pão de Queijo </li>
-                <li>Midinho, o Pequeno Missionário</li>
-                <li>Turminha da Graça</li>
-                <li>Senninha na Pista Maluca</li>
-            </ul>
+        <ul>
+            <li>O Diário de Mika</li>
+            <li>Zuzubalândia (animação)</li>
+            <li>Carrossel em Desenho Animado </li>
+            <li>Zupt! com o Senninha </li>
+            <li>Tronquinho e Pão de Queijo </li>
+            <li>Midinho, o Pequeno Missionário</li>
+            <li>Turminha da Graça</li>
+            <li>Senninha na Pista Maluca</li>
+        </ul>
 
         <h2> Birdo Studio</h2>
-        <p>Estúdio Brasileiro, sua sede se localiza em São Paulo. Seus proprietários são: Luciana Eguti e Paulo Muppet. Foi
+        <p>Estúdio Brasileiro, sua sede se localiza em São Paulo. Seus proprietários são: Luciana Eguti e Paulo Muppet.
+            Foi
             fundada em 2005 com o propósito de elevar a qualidade das animações dos personagens no Brasil. Produziram a
             série
-            animada do “Oswaldo”, “Cupcake & Dino: Serviços Gerais” e criaram as duas mascotes dos jogos Olímpicos de verão
+            animada do “Oswaldo”, “Cupcake & Dino: Serviços Gerais” e criaram as duas mascotes dos jogos Olímpicos de
+            verão
             de
             2016, Vinícius e Tom.</p>
+
+        <footer class="fontes">
+            <a
+                href=" https://revospace.com.br/artigo/10-estudios-de-animacao-brasileiros-que-voce-precisa-conhecer/">Fonte</a>
+        </footer>
 
     </article>
 
     <aside class="img-estudios">
-    <img src="img/estudios/copa-estudios.jpg" alt="copa estudios">
-    <img src="img/estudios/combo-studios.jpg" alt="combo studios">
-    <img src="img/estudios/lightstar-studios.jpg" alt="light star">
-    <img src="img/estudios/44toons.jpg" alt="44 toons">
-    <img src="img/estudios/supertoons.jpg" alt="super toons">
+        <img src="img/estudios/copa-estudios.jpg" alt="copa estudios">
+        <img src="img/estudios/combo-studios.jpg" alt="combo studios">
+        <img src="img/estudios/lightstar-studios.jpg" alt="light star">
+        <img src="img/estudios/44toons.jpg" alt="44 toons">
+        <img src="img/estudios/supertoons.jpg" alt="super toons">
     </aside>
 
     <footer class="footer">
