--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
         </ul>
     </nav>
         <article class="articlehome">
-            <h1>Nostalgia</h1>
-            <p>Você se lembra do primeiro desenho brasileiro que assistiu em nossa TV aberta? ou do primeiro programa que assistiu? Acompanhado de muita nostalgia, atualidades e muita diversão, nosso site lhes apresentam tudo isso e mais um pouco. Além disso, contamos com um quiz super maneiro para testar seus conhecimentos sobre o setor audiovisual de nosso país, há também uma aba com as curiosidades, na qual vocês poderão descobrir diversas coisas legais sobre os desenhos, programas e atores envolvidos nas obras</p>
+            <section>
+                <h1>Nostalgia</h1>
+            <p>Você se lembra do primeiro desenho brasileiro que assistiu em nossa TV aberta? Ou do primeiro programa que assistiu? Acompanhado de muita nostalgia, atualidades e muita diversão, nosso site lhes apresentam tudo isso e mais um pouco. Além disso, contamos com um quiz super maneiro para testar seus conhecimentos sobre o setor audiovisual de nosso país, há também uma aba com as curiosidades, na qual vocês poderão descobrir diversas coisas legais sobre os desenhos, programas e atores envolvidos nas obras.</p>
+            </section>
             <aside class="imghome">
-                <img src="img/img-home.png" alt="">
+                <img src="img/img-home.jpg" alt="imagem com varios personagens televisivo">
             </aside>
         </article>
         
@@ -69,11 +71,11 @@
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
-        <section class="redes-sociais">
+        <figure class="redes-sociais">
             <img src="img/facebook.png" alt="Logo Facebook">
             <img src="img/instagram.png" alt="Logo Instagram">
             <img src="img/twitter.png" alt="Logo Twitter">
-        </section>
+        </figure>
         <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
     </footer>
 </body>
