--- a/contato.html
+++ b/contato.html
@@ -42,10 +42,10 @@
             <p>Quer falar conosco?</p>
             <p>Deixe sua mensagem</p>
 
-        <form>
+        <form class="formulario">
             <p><label>Nome: <input type="text" name="nome"></label></p>
             <p><label>E-mail: <input type="email" name="email"></label></p>
-            <p><label>Mensagem: <textarea name="mensagem" cols="30" rows="10"></textarea></label></p>
+            <p><label>Mensagem: <textarea name="mensagem" cols="25" rows="10"></textarea></label></p>
             <p><button>Enviar</button></p>
         </form>
         
@@ -73,11 +73,11 @@
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
-        <section class="redes-sociais">
+        <figure class="redes-sociais">
             <img src="img/facebook.png" alt="Logo Facebook">
             <img src="img/instagram.png" alt="Logo Instagram">
             <img src="img/twitter.png" alt="Logo Twitter">
-        </section>
+        </figure>
         <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
     </footer>
 </body>
