--- a/curiosidades.html
+++ b/curiosidades.html
@@ -194,11 +194,11 @@
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
-        <section class="redes-sociais">
+        <figure class="redes-sociais">
             <img src="img/facebook.png" alt="Logo Facebook">
             <img src="img/instagram.png" alt="Logo Instagram">
             <img src="img/twitter.png" alt="Logo Twitter">
-        </section>
+        </figure>
         <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
     </footer>
 </body>
