--- a/oswaldo.html
+++ b/oswaldo.html
@@ -38,6 +38,15 @@
         </ul>
     </nav>
 
+    <article class="oswaldo">
+        <h1>Oswaldo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus laudantium harum sapiente impedit quia illum? Officia, in doloremque. Voluptate cum aut in voluptatibus accusamus enim praesentium doloribus deserunt provident dolorum.</p>
+        <aside class="aside-oswaldo">
+            <img src="img/desenhos/oswaldo.jpg" alt="">
+        </aside>
+    </article>
+    
+
     <footer class="footer">
         <h4>Mapa do site</h4>
         <nav>
@@ -61,11 +70,11 @@
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
-        <section class="redes-sociais">
+        <figure class="redes-sociais">
             <img src="img/facebook.png" alt="Logo Facebook">
             <img src="img/instagram.png" alt="Logo Instagram">
             <img src="img/twitter.png" alt="Logo Twitter">
-        </section>
+        </figure>
         <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
     </footer>
 </body>
