--- a/quiz.html
+++ b/quiz.html
@@ -40,74 +40,74 @@
 
     <article class="quiz">
         <h1>Vamos ver quanto você conhece sobre os programas da nossa infância </h1>
-        <form>
-            <fieldset>
+        <form class="perguntas">
+            <fieldset class="pergunta">
                 <legend>Qual o ano de estreia do Mundo da lua?</legend>
                 <p><label><input type="radio" name=q1>1990</label></p>
                 <p><label><input type="radio" name=q1>1991</label></p>
                 <p><label><input type="radio" name=q1>1994</label></p>
             </fieldset>
-            <fieldset>
+            <fieldset class="pergunta">
                 <legend>Luciano Amaral fez quais personagens?</legend>
                 <p><label><input type="radio" name="q2">Lucas e Pedro</label></p>
                 <p><label><input type="radio" name="q2">Abel e Caim</label></p>
                 <p><label><input type="radio" name="q2">Tico e Teco</label></p>
             </fieldset>
-            <fieldset>
+            <fieldset class="pergunta">
                 <legend>Quantos anos o ator do Lucas Silva e Silva tinha na época da série?</legend>
                 <p><label><input type="radio" name="q3">8</label></p>
                 <p><label><input type="radio" name="q3">9</label></p>
                 <p><label><input type="radio" name="q3">10</label></p>
             </fieldset>
-            <fieldset>
+            <fieldset class="pergunta">
                 <legend>Qual o nome do ator que interpretava o Dr. Victor?</legend>
                 <p><label><input type="radio" name="q4">Sergio Memarti</label></p>
                 <p><label><input type="radio" name="q4">Sérgio Mamberti</label></p>
                 <p><label><input type="radio" name="q4">Serjio Mamba</label></p>
             </fieldset>
-            <fieldset>
+            <fieldset class="pergunta">
                 <legend>Qual o nome do Autor de sítio do picapau amarelo?</legend>
                 <p><label><input type="radio" name="q5">Monteiro Lobato</label></p>
                 <p><label><input type="radio" name="q5">Ana Maria Machado</label></p>
                 <p><label><input type="radio" name="q5">Pedro Bandeira</label></p>
             </fieldset>
-            <fieldset>
+            <fieldset class="pergunta">
                 <legend>Em que ano estreia Gub Glub?</legend>
                 <p><label><input type="radio" name="q6">1990</label></p>
                 <p><label><input type="radio" name="q6">1999</label></p>
                 <p><label><input type="radio" name="q6">1991</label></p>
             </fieldset>
-            <fieldset>
+            <fieldset class="pergunta">
                 <legend>Quantos anos o Júlio do cocorico tinha?</legend>
                 <p><label><input type="radio" name="q7">10</label></p>
                 <p><label><input type="radio" name="q7">8</label></p>
                 <p><label><input type="radio" name="q7">6</label></p>
             </fieldset>
-            <fieldset>
+            <fieldset class="pergunta">
                 <legend>Qual o nome da melhor amiga do irmão de Jorel?</legend>
                 <p><label><input type="radio" name="q8">Lora</label></p>
                 <p><label><input type="radio" name="q8">Carla</label></p>
                 <p><label><input type="radio" name="q8">Lara</label></p>
             </fieldset>
-            <fieldset>
+            <fieldset class="pergunta">
                 <legend>Qual é o personagem principal do irmão de Jorel?</legend>
                 <p><label><input type="radio" name="q9">Vovó juju</label></p>
                 <p><label><input type="radio" name="q9">Jorel</label></p>
                 <p><label><input type="radio" name="q9">irmão do Jorel</label></p>
             </fieldset>
-            <fieldset>
+            <fieldset class="pergunta">
                 <legend>Qual é o nome do valentão da sala do irmão de Jorel?</legend>
                 <p><label><input type="radio" name="q10">Tosh</label></p>
                 <p><label><input type="radio" name="q10">Billy Doidão</label></p>
                 <p><label><input type="radio" name="q10">Samantha</label></p>
             </fieldset>
-            <fieldset>
+            <fieldset class="pergunta">
                 <legend>Qual o nome do pato da vovó juju?</legend>
                 <p><label><input type="radio" name="q12">Reginaldo</label></p>
                 <p><label><input type="radio" name="q12">Gesonel</label></p>
                 <p><label><input type="radio" name="q12">Syd Vinicius  </label></p>
             </fieldset>
-            <fieldset>
+            <fieldset class="pergunta">
                 <legend>O que o porteiro do Castelo Rá-Tim-Bum fala?</legend>
                 <p><label><input type="radio" name="q12">“Klift Kloft Still, a porta se abriu!”</label></p>
                 <p><label><input type="radio" name="q12">“Open door, porta aberta!”</label></p>
@@ -140,11 +140,11 @@
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
-        <section class="redes-sociais">
+        <figure class="redes-sociais">
             <img src="img/facebook.png" alt="Logo Facebook">
             <img src="img/instagram.png" alt="Logo Instagram">
             <img src="img/twitter.png" alt="Logo Twitter">
-        </section>
+        </figure>
         <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
     </footer>
 </body>
