--- a/sitio-do-picapau-amarelo.html
+++ b/sitio-do-picapau-amarelo.html
@@ -38,6 +38,24 @@
         </ul>
     </nav>
 
+    <article class="article-sitio">
+        <h1>Sítio do Picapau Amarelo</h1>
+        <section class="sitio1977">
+            <img src="img/programas/sitio1977.jpg" alt="sitio do picapau amarelo de 1977">
+            <section>
+                <h2>1977</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, corporis tempore deleniti qui accusamus quos dolore earum voluptatum? Laudantium nesciunt eligendi possimus mollitia voluptates voluptatibus explicabo obcaecati voluptate reiciendis expedita?</p>
+            </section>
+        </section>
+        <section class="sitio2001">
+            <img src="img/programas/sitio2001.jpg" alt="">
+            <section>
+                <h2>2001</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor eligendi, commodi esse reprehenderit impedit odio ullam eveniet, necessitatibus itaque quas praesentium repellendus ipsa placeat? Provident accusamus nostrum laborum molestiae aut.</p>
+            </section>
+        </section>
+    </article>
+
     <footer class="footer">
         <h4>Mapa do site</h4>
         <nav>
@@ -61,11 +79,11 @@
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
-        <section class="redes-sociais">
+        <figure class="redes-sociais">
             <img src="img/facebook.png" alt="Logo Facebook">
             <img src="img/instagram.png" alt="Logo Instagram">
             <img src="img/twitter.png" alt="Logo Twitter">
-        </section>
+        </figure>
         <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
     </footer>
 </body>
