--- a/irmao-do-jorel.html
+++ b/irmao-do-jorel.html
@@ -38,6 +38,20 @@
         </ul>
     </nav>
 
+    <article class="irmao-jorel">
+        <h1>Irmão do Jorel</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nulla, reprehenderit nostrum repellat repellendus aperiam eveniet minima, quaerat facilis dolore facere neque hic eaque? Impedit beatae unde qui provident a.</p>
+        <aside>
+            <img src="img/desenhos/irmao-jorel.jpg" alt="">
+            <figure>
+                <img src="img/desenhos/irmao-jorel2.jpg" alt="">
+            <img src="img/desenhos/irmao-jorel3.jpg" alt="">
+            <img src="img/desenhos/irmao-jorel4.jpg" alt="">
+            </figure>
+        </aside>
+    </article>
+    
+
     <footer class="footer">
         <h4>Mapa do site</h4>
         <nav>
@@ -61,11 +75,11 @@
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
-        <section class="redes-sociais">
+        <figure class="redes-sociais">
             <img src="img/facebook.png" alt="Logo Facebook">
             <img src="img/instagram.png" alt="Logo Instagram">
             <img src="img/twitter.png" alt="Logo Twitter">
-        </section>
+        </figure>
         <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
     </footer>
 </body>
