--- a/quem-somos.html
+++ b/quem-somos.html
@@ -37,14 +37,21 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
-    <article class="">
+    <article class="quem-somos">
         <h1> Quem Somos</h1>
         <p>Nós somos os Fofurinhas Musicais de Nárnia, um grupo da Fatec São Roque. Os integrantes de realização deste
           trabalho são: Jaquelini Cristina Flavio (RA: 2650832123022), Reginaldo Aparecido de Moraes Junior (RA:
           2650832123004) e Thomas Gonçalves Pereira (RA: 2650832123011). Foi proposto para desenvolvermos o Projeto
           Integrador, com todo conteúdo aprendido nesse semestre. Há 6 tipos de layouts, com um conteúdo sobre desenhos e
-          programas brasileiros infantis. ✌😊</p>
+          programas brasileiros infantis.</p>
+
+          <aside class="integrantes">
+            <img src="img/quem-somos/jaquelini.jpg" alt="Jaquelini">
+            <img src="img/quem-somos/reginaldo.jpg" alt="Reginaldo">
+            <img src="img/quem-somos/thomas.jpg" alt="Thomas">
+        </aside>
       </article>
+      
 
       <footer class="footer">
         <h4>Mapa do site</h4>
@@ -69,11 +76,11 @@
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
-        <section class="redes-sociais">
+        <figure class="redes-sociais">
             <img src="img/facebook.png" alt="Logo Facebook">
             <img src="img/instagram.png" alt="Logo Instagram">
             <img src="img/twitter.png" alt="Logo Twitter">
-        </section>
+        </figure>
         <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
     </footer>
 </body>
