--- a/turma-da-monica.html
+++ b/turma-da-monica.html
@@ -38,6 +38,18 @@
         </ul>
     </nav>
 
+    
+    <article class="turma-monica">
+        <aside>
+            <img src="img/desenhos/turma-da-monica.jpg" alt="">
+            <img src="img/desenhos/turma-da-monica-jogo.jpg" alt="">
+            <img src="img/desenhos/turma-da-monica-filme.jpg" alt="">
+            <img src="img/desenhos/turma-da-monica-gibi.jpg" alt="">
+        </aside>
+        <h1>Turma da Mônica</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere fugiat expedita quisquam cupiditate quod ex vitae tempore officiis exercitationem dolore, officia ullam numquam illum ad pariatur impedit eum possimus voluptate!</p>
+    </article>
+
     <footer class="footer">
         <h4>Mapa do site</h4>
         <nav>
@@ -61,11 +73,11 @@
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
-        <section class="redes-sociais">
+        <figure class="redes-sociais">
             <img src="img/facebook.png" alt="Logo Facebook">
             <img src="img/instagram.png" alt="Logo Instagram">
             <img src="img/twitter.png" alt="Logo Twitter">
-        </section>
+        </figure>
         <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
     </footer>
 </body>
