--- a/programas.html
+++ b/programas.html
@@ -59,7 +59,7 @@
             <p>Tudo começa quando Lucas Silva e Silva ganha um gravador de seu avô paterno Orlando ao completar dez anos. Com a passagem da infância para a adolescência, Lucas cria histórias em seu gravador de como gostaria que as coisas fossem.</p>
             </section>
             <section class="programa">
-                <img src="img/programas/ratimbum.jpg" alt="Rá-Tim-Bum"></img>
+                <img src="img/programas/ratimbum.jpg" alt="Rá-Tim-Bum">
                 <h2>Rá-Tim-Bum</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid provident omnis quia dicta corrupti illo aperiam. Ad quas magnam, reprehenderit nostrum quos voluptas id voluptate deserunt soluta est. Eligendi, aut.</p>
             </section>
@@ -79,8 +79,9 @@
     </article>
 
     <footer class="footer">
-        <h4>Mapa do site</h4>
+        
         <nav>
+            <h4>Mapa do site</h4>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="emissoras.html">Emissoras</a></li>
