--- a/castelo-ra-tim-bum.html
+++ b/castelo-ra-tim-bum.html
@@ -38,12 +38,12 @@
         </ul>
     </nav>
 
-    <article class="cas-rtb">
+    <main class="cas-rtb">
         <img src="img/programas/castelo.jpg" alt="">
-        <section class="cas-rtb-lado">
+        <article class="cas-rtb-lado">
             <h1>Castelo Rá-Tim-Bum</h1>
             <p>Nino é um menino de 300 anos que vive com seu tio e tia-avó, eles moram num castelo. No castelo tem animais falantes e recebe diariamente a visita de amigos humanos como por exemplo o Zeca, Pedro e Biba e outros. O vilão da história conhecido como Dr. Abobrinha, sempre disfarçado querendo comprar Castelo para construir um enorme prédio de cem andares.</p>
-        </section>
+        </article>
         <aside class="img-castelo">
             <img src="img/programas/personagens.jpg" alt="">
             <img src="img/programas/etevaldo.jpg" alt="">
@@ -51,11 +51,12 @@
             <img src="img/programas/moradores.jpg" alt="">
             <img src="img/programas/dr-abobrinha.jpg" alt="">
         </aside>
-    </article>
+    </main>
 
     <footer class="footer">
-        <h4>Mapa do site</h4>
+        
         <nav>
+            <h4>Mapa do site</h4>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="emissoras.html">Emissoras</a></li>
