--- a/cocorico.html
+++ b/cocorico.html
@@ -38,11 +38,11 @@
         </ul>
     </nav>
 
-    <article class="cocorico">
-        <section>
+    <main class="cocorico">
+        <article>
             <h1>Cocoricó</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error asperiores ullam in impedit iste quo quia excepturi laboriosam, maxime corrupti delectus, obcaecati sequi facere assumenda. Aperiam unde repudiandae quibusdam corrupti?</p>
-        </section>
+        </article>
         <section class="imgs-cocorico">
         <img src="img/programas/cocorico.jpg" alt="personagens principais">
 
@@ -51,11 +51,12 @@
             <img src="img/programas/cocorico3.jpg" alt="outros personagens">
         </aside>
         </section>
-    </article>
+    </main>
 
     <footer class="footer">
-        <h4>Mapa do site</h4>
+        
         <nav>
+            <h4>Mapa do site</h4>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="emissoras.html">Emissoras</a></li>
