--- a/irmao-do-jorel.html
+++ b/irmao-do-jorel.html
@@ -38,9 +38,13 @@
         </ul>
     </nav>
 
-    <article class="irmao-jorel">
-        <h1>Irmão do Jorel</h1>
+    <main class="irmao-jorel">
+
+        <article>
+            <h1>Irmão do Jorel</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nulla, reprehenderit nostrum repellat repellendus aperiam eveniet minima, quaerat facilis dolore facere neque hic eaque? Impedit beatae unde qui provident a.</p>
+        </article>
+
         <aside>
             <img src="img/desenhos/irmao-jorel.jpg" alt="">
             <figure>
@@ -49,12 +53,13 @@
             <img src="img/desenhos/irmao-jorel4.jpg" alt="">
             </figure>
         </aside>
-    </article>
+    </main>
     
 
     <footer class="footer">
-        <h4>Mapa do site</h4>
+        
         <nav>
+            <h4>Mapa do site</h4>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="emissoras.html">Emissoras</a></li>
