--- a/oswaldo.html
+++ b/oswaldo.html
@@ -38,18 +38,21 @@
         </ul>
     </nav>
 
-    <article class="oswaldo">
-        <h1>Oswaldo</h1>
+    <main class="oswaldo">
+        <article>
+            <h1>Oswaldo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus laudantium harum sapiente impedit quia illum? Officia, in doloremque. Voluptate cum aut in voluptatibus accusamus enim praesentium doloribus deserunt provident dolorum.</p>
+        </article>
         <aside class="aside-oswaldo">
             <img src="img/desenhos/oswaldo.jpg" alt="">
         </aside>
-    </article>
+    </main>
     
 
     <footer class="footer">
-        <h4>Mapa do site</h4>
+        
         <nav>
+            <h4>Mapa do site</h4>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="emissoras.html">Emissoras</a></li>
