--- a/quem-somos.html
+++ b/quem-somos.html
@@ -37,25 +37,28 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
-    <article class="quem-somos">
-        <h1> Quem Somos</h1>
+    <main class="quem-somos">
+        <article>
+            <h1> Quem Somos</h1>
         <p>Nós somos os Fofurinhas Musicais de Nárnia, um grupo da Fatec São Roque. Os integrantes de realização deste
           trabalho são: Jaquelini Cristina Flavio (RA: 2650832123022), Reginaldo Aparecido de Moraes Junior (RA:
           2650832123004) e Thomas Gonçalves Pereira (RA: 2650832123011). Foi proposto para desenvolvermos o Projeto
           Integrador, com todo conteúdo aprendido nesse semestre. Há 6 tipos de layouts, com um conteúdo sobre desenhos e
           programas brasileiros infantis.</p>
+        </article>
 
           <aside class="integrantes">
             <img src="img/quem-somos/jaquelini.jpg" alt="Jaquelini">
             <img src="img/quem-somos/reginaldo.jpg" alt="Reginaldo">
             <img src="img/quem-somos/thomas.jpg" alt="Thomas">
         </aside>
-      </article>
+      </main>
       
 
       <footer class="footer">
-        <h4>Mapa do site</h4>
+        
         <nav>
+            <h4>Mapa do site</h4>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="emissoras.html">Emissoras</a></li>
