--- a/quiz.html
+++ b/quiz.html
@@ -111,15 +111,16 @@
                 <legend>O que o porteiro do Castelo Rá-Tim-Bum fala?</legend>
                 <p><label><input type="radio" name="q12">“Klift Kloft Still, a porta se abriu!”</label></p>
                 <p><label><input type="radio" name="q12">“Open door, porta aberta!”</label></p>
-                <p><label><input type="radio" name="q12">“Come in, the door is open, entre a porta está aberta!”</label></p>
+                <p><label><input type="radio" name="q12">“Abre te Sésamo”</label></p>
             </fieldset>
         </form>
 
     </article>
 
     <footer class="footer">
-        <h4>Mapa do site</h4>
+        
         <nav>
+            <h4>Mapa do site</h4>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="emissoras.html">Emissoras</a></li>
