--- a/sitio-do-picapau-amarelo.html
+++ b/sitio-do-picapau-amarelo.html
@@ -38,27 +38,28 @@
         </ul>
     </nav>
 
-    <article class="article-sitio">
+    <main class="article-sitio">
         <h1>Sítio do Picapau Amarelo</h1>
-        <section class="sitio1977">
+        <article class="sitio1977">
             <img src="img/programas/sitio1977.jpg" alt="sitio do picapau amarelo de 1977">
             <section>
                 <h2>1977</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, corporis tempore deleniti qui accusamus quos dolore earum voluptatum? Laudantium nesciunt eligendi possimus mollitia voluptates voluptatibus explicabo obcaecati voluptate reiciendis expedita?</p>
+                <p>Sítio do Pica-Pau Amarelo, série de televisão brasileira produzida pela rede Globo no ano de 1977, foi a terceira adaptação televisiva da obra homônima e Monteiro Lobato. A série se passa num sítio, é focada nos personagens criado por Monteiro Lobato, também com alguns personagens do folclore brasileiro. </p>
             </section>
-        </section>
-        <section class="sitio2001">
+        </article>
+        <article class="sitio2001">
             <img src="img/programas/sitio2001.jpg" alt="">
             <section>
                 <h2>2001</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor eligendi, commodi esse reprehenderit impedit odio ullam eveniet, necessitatibus itaque quas praesentium repellendus ipsa placeat? Provident accusamus nostrum laborum molestiae aut.</p>
+                <p>Sítio do Pica-Pau Amarelo, série de televisão brasileira produzida pela rede globo. Após ter feito muito sucesso no antepassado a série voltou a ser produzida em 2001 até 2007, focando principalmente nos personagens criados por Lobato. Além dos personagens fantasiosos, como os do folclore brasileiro, pois no sítio tudo é possível, a fantasia se mistura com a realidade fazendo parte do cotidiano dos personagens.</p>
             </section>
-        </section>
-    </article>
+        </article>
+    </main>
 
     <footer class="footer">
-        <h4>Mapa do site</h4>
+        
         <nav>
+            <h4>Mapa do site</h4>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="emissoras.html">Emissoras</a></li>
