--- a/castelo-ra-tim-bum.html
+++ b/castelo-ra-tim-bum.html
@@ -39,22 +39,21 @@
     </nav>
 
     <main class="cas-rtb">
-        <img src="img/programas/castelo.jpg" alt="">
+        <img src="img/programas/castelo.jpg" alt="bandeira do castelo ra-tim-bum">
         <article class="cas-rtb-lado">
             <h1>Castelo Rá-Tim-Bum</h1>
             <p>Nino é um menino de 300 anos que vive com seu tio e tia-avó, eles moram num castelo. No castelo tem animais falantes e recebe diariamente a visita de amigos humanos como por exemplo o Zeca, Pedro e Biba e outros. O vilão da história conhecido como Dr. Abobrinha, sempre disfarçado querendo comprar Castelo para construir um enorme prédio de cem andares.</p>
         </article>
         <aside class="img-castelo">
-            <img src="img/programas/personagens.jpg" alt="">
-            <img src="img/programas/etevaldo.jpg" alt="">
-            <img src="img/programas/passarinho.jpg" alt="">
-            <img src="img/programas/moradores.jpg" alt="">
-            <img src="img/programas/dr-abobrinha.jpg" alt="">
+            <img src="img/programas/personagens.jpg" alt="personagens principais">
+            <img src="img/programas/etevaldo.jpg" alt="etevaldo">
+            <img src="img/programas/passarinho.jpg" alt="passarinhos">
+            <img src="img/programas/moradores.jpg" alt="moradores do castelo">
+            <img src="img/programas/dr-abobrinha.jpg" alt="dr abobrinha">
         </aside>
     </main>
 
     <footer class="footer">
-        
         <nav>
             <h4>Mapa do site</h4>
             <ul>
@@ -74,6 +73,7 @@
                 <li><a href="quiz.html">Quiz</a></li>
                 <li><a href="quem-somos.html">Quem Somos</a></li>
                 <li><a href="contato.html">Contato</a></li>
+                <li><a href="referencias-bibliograficas.html">Referências Bibliográficas</a></li>
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
