--- a/cocorico.html
+++ b/cocorico.html
@@ -41,20 +41,20 @@
     <main class="cocorico">
         <article>
             <h1>Cocoricó</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error asperiores ullam in impedit iste quo quia excepturi laboriosam, maxime corrupti delectus, obcaecati sequi facere assumenda. Aperiam unde repudiandae quibusdam corrupti?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error asperiores ullam in impedit iste quo quia excepturi laboriosam, maxime corrupti delectus, obcaecati sequi facere assumenda. Aperiam unde repudiandae quibusdam corrupti?</p>
         </article>
-        <section class="imgs-cocorico">
-        <img src="img/programas/cocorico.jpg" alt="personagens principais">
 
-        <aside class="img-cocorico">
-            <img src="img/programas/cocorico2.jpg" alt="personagens secundarios">
-            <img src="img/programas/cocorico3.jpg" alt="outros personagens">
-        </aside>
+        <section class="imgs-cocorico">
+            <img src="img/programas/cocorico.jpg" alt="personagens principais">
+
+            <aside class="img-cocorico">
+                <img src="img/programas/cocorico2.jpg" alt="personagens secundarios">
+                <img src="img/programas/cocorico3.jpg" alt="outros personagens">
+            </aside>
         </section>
     </main>
 
     <footer class="footer">
-        
         <nav>
             <h4>Mapa do site</h4>
             <ul>
@@ -74,6 +74,7 @@
                 <li><a href="quiz.html">Quiz</a></li>
                 <li><a href="quem-somos.html">Quem Somos</a></li>
                 <li><a href="contato.html">Contato</a></li>
+                <li><a href="referencias-bibliograficas.html">Referências Bibliográficas</a></li>
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
