--- a/contato.html
+++ b/contato.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-       <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
+        <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
     </header>
     <nav class="nav">
         <ul>
@@ -37,21 +37,23 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
-    <article class="contato">
-        <h1>Contato</h1>
+
+    <main class="contato">
+        <article>
+            <h1>Contato</h1>
             <p>Quer falar conosco?</p>
             <p>Deixe sua mensagem</p>
+        </article>
 
         <form class="formulario">
             <p><label>Nome: <input type="text" name="nome"></label></p>
             <p><label>E-mail: <input type="email" name="email"></label></p>
-            <p><label>Mensagem: <textarea name="mensagem" cols="25" rows="10"></textarea></label></p>
+            <p><label>Mensagem: <textarea name="mensagem" cols="23" rows="10"></textarea></label></p>
             <p><button>Enviar</button></p>
         </form>
-        
-    </article>
+    </main>
+
     <footer class="footer">
-        
         <nav>
             <h4>Mapa do site</h4>
             <ul>
@@ -71,6 +73,7 @@
                 <li><a href="quiz.html">Quiz</a></li>
                 <li><a href="quem-somos.html">Quem Somos</a></li>
                 <li><a href="contato.html">Contato</a></li>
+                <li><a href="referencias-bibliograficas.html">Referências Bibliográficas</a></li>
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
