--- a/desenhos.html
+++ b/desenhos.html
@@ -152,7 +152,7 @@ Seus Amigos</h2>
             </section>
     
             <section class="desenho">
-                <img src="img/desenhos/dino.jpg" alt="">
+                <img src="img/desenhos/dino.jpg" alt="Dino aventuras">
                 <h2>Dino Aventuras</h2>
             <p>Dino e seus amigos se aventuram por ilhas flutuantes em seu barco voador, a cada novo episódio o pássaro-mensageiro lhes trazem uma nova aventura.</p>
             </section>
@@ -162,8 +162,8 @@ Seus Amigos</h2>
        </section>
 
     </article>
+
     <footer class="footer">
-        
         <nav>
             <h4>Mapa do site</h4>
             <ul>
@@ -183,6 +183,7 @@ Seus Amigos</h2>
                 <li><a href="quiz.html">Quiz</a></li>
                 <li><a href="quem-somos.html">Quem Somos</a></li>
                 <li><a href="contato.html">Contato</a></li>
+                <li><a href="referencias-bibliograficas.html">Referências Bibliográficas</a></li>
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
