--- a/sitio-do-picapau-amarelo.html
+++ b/sitio-do-picapau-amarelo.html
@@ -39,7 +39,9 @@
     </nav>
 
     <main class="article-sitio">
+
         <h1>Sítio do Picapau Amarelo</h1>
+        
         <article class="sitio1977">
             <img src="img/programas/sitio1977.jpg" alt="sitio do picapau amarelo de 1977">
             <section>
@@ -57,7 +59,6 @@
     </main>
 
     <footer class="footer">
-        
         <nav>
             <h4>Mapa do site</h4>
             <ul>
@@ -77,6 +78,7 @@
                 <li><a href="quiz.html">Quiz</a></li>
                 <li><a href="quem-somos.html">Quem Somos</a></li>
                 <li><a href="contato.html">Contato</a></li>
+                <li><a href="referencias-bibliograficas.html">Referências Bibliográficas</a></li>
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
