--- a/trilha-sonora.html
+++ b/trilha-sonora.html
@@ -37,6 +37,7 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
+    
     <article class="trilha">
         <h1>Trilhas nostálgicas</h1>
         <a href="https://www.youtube.com/watch?v=O9snMaJj62Y" target="_blank"><img src="img/trilha-sonora/abertura-casteloratimbum.jpg" alt="castelo ra tim bum"></a>
@@ -54,7 +55,6 @@
     </article>
 
     <footer class="footer">
-        
         <nav>
             <h4>Mapa do site</h4>
             <ul>
@@ -74,6 +74,7 @@
                 <li><a href="quiz.html">Quiz</a></li>
                 <li><a href="quem-somos.html">Quem Somos</a></li>
                 <li><a href="contato.html">Contato</a></li>
+                <li><a href="referencias-bibliograficas.html">Referências Bibliográficas</a></li>
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
