--- a/irmao-do-jorel.html
+++ b/irmao-do-jorel.html
@@ -9,8 +9,9 @@
 
 <body>
     <header>
-       <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
+        <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
     </header>
+
     <nav class="nav">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -39,25 +40,21 @@
     </nav>
 
     <main class="irmao-jorel">
-
+        <img src="img/desenhos/irmao-jorel.jpg" alt="irmão do jorel">
         <article>
             <h1>Irmão do Jorel</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nulla, reprehenderit nostrum repellat repellendus aperiam eveniet minima, quaerat facilis dolore facere neque hic eaque? Impedit beatae unde qui provident a.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nulla, reprehenderit nostrum repellat repellendus aperiam eveniet minima, quaerat facilis dolore facere neque hic eaque? Impedit beatae unde qui provident a.</p>
         </article>
 
         <aside>
-            <img src="img/desenhos/irmao-jorel.jpg" alt="">
-            <figure>
-                <img src="img/desenhos/irmao-jorel2.jpg" alt="">
-            <img src="img/desenhos/irmao-jorel3.jpg" alt="">
-            <img src="img/desenhos/irmao-jorel4.jpg" alt="">
-            </figure>
+            <img src="img/desenhos/irmao-jorel3.jpg" alt="familia irmao do jorel">
+            <img src="img/desenhos/irmao-jorel4.jpg" alt="cena de ação">
+            <img src="img/desenhos/irmao-jorel2.jpg" alt="personagens">
         </aside>
     </main>
-    
+
 
     <footer class="footer">
-        
         <nav>
             <h4>Mapa do site</h4>
             <ul>
@@ -77,6 +74,7 @@
                 <li><a href="quiz.html">Quiz</a></li>
                 <li><a href="quem-somos.html">Quem Somos</a></li>
                 <li><a href="contato.html">Contato</a></li>
+                <li><a href="referencias-bibliograficas.html">Referências Bibliográficas</a></li>
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
