--- a/quem-somos.html
+++ b/quem-somos.html
@@ -37,10 +37,11 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
+
     <main class="quem-somos">
         <article>
             <h1> Quem Somos</h1>
-        <p>Nós somos os Fofurinhas Musicais de Nárnia, um grupo da Fatec São Roque. Os integrantes de realização deste
+            <p>Nós somos os Fofurinhas Musicais de Nárnia, um grupo da Fatec São Roque. Os integrantes de realização deste
           trabalho são: Jaquelini Cristina Flavio (RA: 2650832123022), Reginaldo Aparecido de Moraes Junior (RA:
           2650832123004) e Thomas Gonçalves Pereira (RA: 2650832123011). Foi proposto para desenvolvermos o Projeto
           Integrador, com todo conteúdo aprendido nesse semestre. Há 6 tipos de layouts, com um conteúdo sobre desenhos e
@@ -55,8 +56,7 @@
       </main>
       
 
-      <footer class="footer">
-        
+    <footer class="footer">
         <nav>
             <h4>Mapa do site</h4>
             <ul>
@@ -76,6 +76,7 @@
                 <li><a href="quiz.html">Quiz</a></li>
                 <li><a href="quem-somos.html">Quem Somos</a></li>
                 <li><a href="contato.html">Contato</a></li>
+                <li><a href="referencias-bibliograficas.html">Referências Bibliográficas</a></li>
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
