--- a/quiz.html
+++ b/quiz.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-       <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
+        <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
     </header>
     <nav class="nav">
         <ul>
@@ -103,9 +103,9 @@
             </fieldset>
             <fieldset class="pergunta">
                 <legend>Qual o nome do pato da vovó juju?</legend>
-                <p><label><input type="radio" name="q12">Reginaldo</label></p>
-                <p><label><input type="radio" name="q12">Gesonel</label></p>
-                <p><label><input type="radio" name="q12">Syd Vinicius  </label></p>
+                <p><label><input type="radio" name="q11">Reginaldo</label></p>
+                <p><label><input type="radio" name="q11">Gesonel</label></p>
+                <p><label><input type="radio" name="q11">Syd Vinicius  </label></p>
             </fieldset>
             <fieldset class="pergunta">
                 <legend>O que o porteiro do Castelo Rá-Tim-Bum fala?</legend>
@@ -118,7 +118,6 @@
     </article>
 
     <footer class="footer">
-        
         <nav>
             <h4>Mapa do site</h4>
             <ul>
@@ -138,6 +137,7 @@
                 <li><a href="quiz.html">Quiz</a></li>
                 <li><a href="quem-somos.html">Quem Somos</a></li>
                 <li><a href="contato.html">Contato</a></li>
+                <li><a href="referencias-bibliograficas.html">Referências Bibliográficas</a></li>
             </ul>
         </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
